--- a/README.Rmd
+++ b/README.Rmd
@@ -14,9 +14,10 @@ We are really not done here! Very prelim code, so beware!
 library(bbotk)
 library(mlr3mbo)
 library(paradox)
+library(mlr3learners)
 
-ObjectiveRFun$new(
-  fun = function(xs) sum(umlist(xs)^2),
+obfun = ObjectiveRFun$new(
+  fun = function(xs) sum(unlist(xs)^2),
   domain = ParamSet$new(list(ParamDbl$new("x", -5, 5))),
   id = "test"
 )
@@ -28,12 +29,15 @@ instance = OptimInstanceSingleCrit$new(
   terminator = terminator
 )
 
+design = generate_design_lhs(obfun$domain, 10)$data
+instance$eval_batch(design)
+
 surrogate = SurrogateLearner$new(learner = lrn("regr.km"))
 acqfun = AcqFunctionCB$new(surrogate = surrogate)
 proposal_generator = ProposalGeneratorSingle$new(
   acq_function = acqfun, 
   acq_optimizer = AcqOptimizer$new())
 optimizer = OptimizerMbo$new(proposal_generator = proposal_generator)
-
+optimizer$optimize(instance)
 
 ```
