--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ instance$eval_batch(design)
 
 surrogate = SurrogateLearner$new(learner = lrn("regr.km"))
 acqfun = AcqFunctionCB$new(surrogate = surrogate)
-acqopt = AcqOptimizerFromOptimizer$new(OptimizerRandomSearch$new(), trm("evals", 1000))
+acqopt = AcqOptimizerFromOptimizer$new(OptimizerRandomSearch$new(), trm("evals", n_evals = 1000))
 proposal_generator = ProposalGeneratorSingle$new(
   acq_function = acqfun, 
   acq_optimizer = acqopt)
