--- a/vignettes/mlr3mbo.Rmd
+++ b/vignettes/mlr3mbo.Rmd
@@ -14,6 +14,52 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
-library(mlr3mbo)
+## Using mlr3tuing
+
+```{r}
+library(mlr3)
+library(mlr3tuning)
+library(paradox)
+
+task = tsk("pima")
+learner = lrn("classif.rpart")
+
+search_space = ParamSet$new(list(
+  ParamDbl$new("cp", lower = 0.001, upper = 0.1)
+))
+
+resampling = rsmp("holdout")
+measure = msr("classif.ce")
+
+terminator = trm("evals", n_evals = 20)
+
+instance = TuningInstanceSingleCrit$new(
+  task = task, 
+  learner = learner, 
+  resampling = resampling, 
+  measure = measure, 
+  terminator = terminator, 
+  search_space = search_space)
 ```
+
+
+```{r}
+library(mlr3mbo)
+library(mlr3learners)
+
+surrogate = SurrogateSingleCritLearner$new(learner = lrn("regr.km"))
+acq_function = AcqFunctionEI$new(surrogate = surrogate)
+acq_optimizer = AcqOptimizerRandomSearch$new()
+
+tuner = TunerMbo$new(
+  loop_function = bayesop_soo, 
+  acq_function = acq_function, 
+  acq_optimizer = acq_optimizer)
+
+tuner$optimize(instance)
+```
+
+```{r}
+instance$result
+```
+
