remove redundant optimizers

--- a/README.Rmd
+++ b/README.Rmd
@@ -62,7 +62,7 @@ acqopt = AcqOptimizerFromOptimizer$new(
   trm("evals", n_evals = 100)
 )
 bayesop_soo(instance, acqfun, acqopt)
-plot(y~batch_nr, instance$archive$data()[batch_nr>1,], type = "b")
+plot(y~batch_nr, instance$archive$data[batch_nr>1,], type = "b")
 ```
 
 ## Multipoint through constant liar
@@ -83,5 +83,5 @@ acqopt = AcqOptimizerFromOptimizer$new(
   trm("evals", n_evals = 100)
 )
 bayesop_mpcl(instance, acqfun, acqopt)
-plot(y~batch_nr, instance$archive$data()[batch_nr>1,], type = "b")
+plot(y~batch_nr, instance$archive$data[batch_nr>1,], type = "b")
 ```
