--- a/README.Rmd
+++ b/README.Rmd
@@ -53,7 +53,7 @@ library(paradox)
 library(mlr3learners)
 
 obfun = ObjectiveRFun$new(
-  fun = function(xs) list(y = sum(unlist(xs)^2)),
+  fun = function(xs) list(y = sum(xs$x^2)),
   domain = ParamSet$new(list(ParamDbl$new("x", -5, 5))),
   id = "xsq"
 )
@@ -91,13 +91,13 @@ task = tsk("pima")
 learner = lrn("classif.rpart", cp = to_tune(1e-04, 1e-1, logscale = TRUE))
 
 instance = tune(
-       method = "mbo",
-       task = task,
-       learner = learner,
-       resampling = rsmp("holdout"),
-       measure = msr("classif.ce"),
-       term_evals = 10
-     )
+  method = "mbo",
+  task = task,
+  learner = learner,
+  resampling = rsmp("holdout"),
+  measure = msr("classif.ce"),
+  term_evals = 10
+)
 
 instance$result
 ```
