--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ lgr::get_logger("bbotk")$set_threshold("warn")
 
 # mlr3mbo
 
-A new R6 and much more modular implementation for single- and multi-crit Bayesian optimization.
+A new R6 and much more modular implementation for single- and multicriteria Bayesian optimization.
 
 <!-- badges: start -->
 [![tic](https://github.com/mlr-org/mlr3mbo/workflows/tic/badge.svg?branch=main)](https://github.com/mlr-org/mlr3mbo/actions)
@@ -24,10 +24,10 @@ A new R6 and much more modular implementation for single- and multi-crit Bayesia
 `mlr3mbo` is built modular relying on the following [R6](https://cran.r-project.org/package=R6) classes:
 
 * `Surrogate`: Surrogate Model
-*  `AcqFunction`: Acquisition Function
-*  `AcqOptimizer`: Acquisition Function Optimizer
+* `AcqFunction`: Acquisition Function
+* `AcqOptimizer`: Acquisition Function Optimizer
 
-Based on these, Bayesian optimization loops can be written, see, e.g., `bayesopt_soo` for sequential single objective BO.
+Based on these, Bayesian optimization loops can be written, see, e.g., `bayesopt_ego` for sequential single objective BO.
 
 `mlr3mbo` also provides an `OptimizerMbo` class behaving like any other `Optimizer` from the [bbotk](https://cran.r-project.org/package=bbotk) package.
 
@@ -42,7 +42,7 @@ See `?mbo_defaults` for more details.
 
 ## Simple Optimization Example
 
-Minimize `y = x^2` via sequential single objective BO using a GP as surrogate and EI optimized via random search as aquisition function:
+Minimize `y = x^2` via sequential singlecriteria BO using a GP as surrogate and EI optimized via random search as aquisition function:
 
 ```{r, message = FALSE}
 set.seed(1)
@@ -53,9 +53,9 @@ library(paradox)
 library(mlr3learners)
 
 obfun = ObjectiveRFun$new(
-  fun = function(xs) list(y = sum(xs$x^2)),
-  domain = ParamSet$new(list(ParamDbl$new("x", -5, 5))),
-  id = "xsq"
+  fun = function(xs) list(y = xs$x ^ 2),
+  domain = ps(x = p_dbl(lower = -5, upper = 5)),
+  codomain = ps(y = p_dbl(tags = "minimize"))
 )
 
 terminator = trm("evals", n_evals = 10)
@@ -68,14 +68,19 @@ instance = OptimInstanceSingleCrit$new(
 design = generate_design_lhs(obfun$domain, 4)$data
 instance$eval_batch(design)
 
-surrogate = SurrogateSingleCritLearner$new(learner = lrn("regr.km", control = list(trace = FALSE)))
-acqfun = AcqFunctionEI$new(surrogate = surrogate)
+surrogate = SurrogateLearner$new(lrn("regr.km", control = list(trace = FALSE)))
+acqfun = AcqFunctionEI$new()
 acqopt = AcqOptimizer$new(
   opt("random_search", batch_size = 100),
-  trm("evals", n_evals = 100)
-)
+  terminator = trm("evals", n_evals = 100)
+ )
 
-optimizer = opt("mbo", loop_function = bayesopt_soo, acq_function = acqfun, acq_optimizer = acqopt)
+optimizer = opt("mbo",
+  loop_function = bayesopt_ego,
+  surrogate = surrogate,
+  acq_function = acqfun,
+  acq_optimizer = acqopt
+)
 optimizer$optimize(instance)
 ```
 
@@ -88,7 +93,7 @@ library(mlr3tuning)
 
 task = tsk("pima")
 
-learner = lrn("classif.rpart", cp = to_tune(1e-04, 1e-1, logscale = TRUE))
+learner = lrn("classif.rpart", cp = to_tune(lower = 1e-04, upper = 1e-1, logscale = TRUE))
 
 instance = tune(
   method = "mbo",
