--- a/README.Rmd
+++ b/README.Rmd
@@ -53,9 +53,9 @@ library(paradox)
 library(mlr3learners)
 
 obfun = ObjectiveRFun$new(
-  fun = function(xs) list(y = xs$x ^ 2),
+  fun = function(xs) list(y1 = xs$x ^ 2),
   domain = ps(x = p_dbl(lower = -5, upper = 5)),
-  codomain = ps(y = p_dbl(tags = "minimize"))
+  codomain = ps(y1 = p_dbl(tags = "minimize"))
 )
 
 terminator = trm("evals", n_evals = 10)
@@ -73,7 +73,7 @@ acqfun = AcqFunctionEI$new()
 acqopt = AcqOptimizer$new(
   opt("random_search", batch_size = 100),
   terminator = trm("evals", n_evals = 100)
- )
+)
 
 optimizer = opt("mbo",
   loop_function = bayesopt_ego,
@@ -84,9 +84,38 @@ optimizer = opt("mbo",
 optimizer$optimize(instance)
 ```
 
-## Simple Tuning Example Using Defaults
+Note that you can also use `bb_optimize` as a shorthand:
 
 ```{r, message = FALSE}
+set.seed(1)
+
+fun = function(xs) list(y1 = xs$x ^ 2)
+
+surrogate = SurrogateLearner$new(lrn("regr.km", control = list(trace = FALSE)))
+acqfun = AcqFunctionEI$new()
+acqopt = AcqOptimizer$new(
+  opt("random_search", batch_size = 100),
+  terminator = trm("evals", n_evals = 100)
+)
+optimizer = opt("mbo",
+  loop_function = bayesopt_ego,
+  surrogate = surrogate,
+  acq_function = acqfun,
+  acq_optimizer = acqopt
+)
+
+result = bb_optimize(
+  fun,
+  method = optimizer,
+  lower = c(x = -5),
+  upper = c(x = 5),
+  max_evals = 10
+)
+```
+
+## Simple Tuning Example Using Defaults
+
+```{r, message = FALSE, eval = FALSE}
 set.seed(1)
 library(mlr3)
 library(mlr3tuning)
